--- a/F-Droid/fdroid-check.service
+++ b/F-Droid/fdroid-check.service
@@ -4,6 +4,6 @@ After=fdroid.service
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/podman exec --user 101:101 --workdir=/ fdroid python3 /download.py
-ExecStartPost=/usr/bin/podman exec --user 101:101 --workdir=/fdroid fdroid cleanup
-ExecStartPost=/usr/bin/podman exec --user 101:101 --workdir=/fdroid fdroid fdroid update
+ExecStart=/usr/bin/podman exec --workdir=/ fdroid python3 /download.py
+ExecStartPost=/usr/bin/podman exec --workdir=/fdroid fdroid cleanup
+ExecStartPost=/usr/bin/podman exec --workdir=/fdroid fdroid fdroid update
