--- a/Archiveteam/Dockerfile
+++ b/Archiveteam/Dockerfile
@@ -10,3 +10,5 @@ RUN --network=none usermod -u ${UID} warrior && groupmod -g ${UID} warrior \
 ADD --chmod=755 https://github.com/secureblue/secureblue/raw/681a8c1a8fa77f401be5d117babbda44fdd142ad/files/scripts/removesuid.sh /tmp/
 RUN --network=none /tmp/removesuid.sh || true && rm /tmp/removesuid.sh
 USER ${UID}
+ENTRYPOINT []
+CMD [ "python", "start.py" ]
